<resources>
    <string name="app_name">ICarNFC</string>
    <string name="mesvoitures">Mes Voitures</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se Connecter</string>
    <string name="action_sign_up">Créer votre compte</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nfc_reading">Reading NFC&#8230;</string>
    <string name="share">SHARE</string>
    <string name="clear">CLEAR</string>
    <string name="label_demo_nfc">Lecture et écriture de TAG NFC</string>
    <string name="contenu">Veuillez écrire un message....</string>
    <string name="notification">Creer une notification</string>
    <string name="apropos">A propos</string>
    <string name="quitter">Quitter</string>
    <string name="retour">Retour</string>
    <string name="title_activity_test">Sign in</string>
    <string name="hello">Hello</string>
    <string name="scan">Scanner votre voiture</string>
    <string name="addcar">Enregistrer la voiture</string>
    <string name="scanpro">Scanner la voiture</string>
    <string name="addentretien">Ajouter un entretien</string>
    <string name="historique">Historique des entretiens</string>
    <string name="title_activity_code_recup">Sign in</string>
    <string name="selection">Veuillez selectionner la voiture que vous avez réviser</string>
    <string name="anyvoiture">Vous avez aucune voiture</string>
</resources>

