<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <Button
        android:id="@+id/historique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addfiche"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/historique" />

    <Button
        android:id="@+id/scanpro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="193dp"
        android:text="@string/scanpro" />

    <Button
        android:id="@+id/addfiche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addentretien"
        android:layout_below="@+id/scanpro"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginTop="41dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ad"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>